2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/util/atomic.h: Fix a documentation spelling error.

2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump revision to 1.5.1-20071030 in order to
	indicate post-release 1.5.1-20071029 state.

2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump revision to 1.5.1-20071029 in order to
	prepare for a new (unstable) release.

2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dean Camera:
	Patch #5644: New interrupt.h header file
	* include/avr/interrupt.h: Complete overhaul of the ISR() and related
	macros.
	By Joerg Wunsch:
	* doc/api/interrupts.dox: Update the interrupt documentation to all
	the new features.

2007-10-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Florin-Viorel Petrov
	Patch #6236: Improving _delay_us and _delay_ms
	* include/util/delay.h: Provide fallback functionality
	to extend the possible argument range to _delay_us(),
	and _delay_ms(), respectively.

2007-10-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Cliff Lawson and Carlos Lamas:
	Patch #5343: Add a util/setbaud.h "helper" file
	* include/util/setbaud.h: New file.
	* include/util/Makefile.am: Include setbaud.h.

2007-10-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dean Camera:
	Patch #5756: New atomic.h header file
	* include/util/atomic.h: New file.
	* include/util/Makefile.am: Include atomic.h.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/iocanxx.h (OVFG): Define.
	Closes bug #21434.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/io90pwmx.h (AMP0EN, AMP0IS, AMP0G1, AMP0G0, AMP0TS1, 
	AMP0TS0, AMP1EN, AMP1IS, AMP1G1, AMP1G0, AMP1TS1, AMP1TS0, 
	ADASCR): Define.
	Closes bug #20435.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/io2313.h (TICIE1): Define.
	Closes bug #20682.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn13.h (EIN1D): Rename to AIN1D.
	Closes bug #21411.
